data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2260.wast
;; 1. **Test Description**: Create a block with `blocktype` specified as `typeidx` pointing to a valid function type, followed by a sequence of instructions including `br_if` which should branch based on an operand condition from the stack.    - **Constraint Checked**: Ensures correct interpretation of `typeidx` for `blocktype` and proper condition evaluation on `br_if`.    - **Relation to Condition Evaluation**: Misinterpretation of `typeidx` or incorrect condition handling in `br_if` may lead to incorrect branching.

(assert_invalid
  (module
    (type $t0 (func (result i32)))
    (func $type-block-typeidx (result i32)
      (block $t0
        (i32.const 1)
        (br_if 0 (i32.const 0))
      )
    )
  )
  "type mismatch"
)